--- a/WebBellwether.API/WebBellwether.API.csproj
+++ b/WebBellwether.API/WebBellwether.API.csproj
@@ -162,35 +162,31 @@
     <Compile Include="Context\EfDbContext.cs" />
     <Compile Include="Context\InitSeed.cs" />
     <Compile Include="Context\InitSeedEngine.cs" />
+    <Compile Include="Context\NewInitSeed.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\IntegrationGamesController.cs" />
     <Compile Include="Controllers\LanguageController.cs" />
     <Compile Include="Controllers\OrderController.cs" />
     <Compile Include="Controllers\RefreshTokensController.cs" />
-    <Compile Include="Entities\IntegrationGames\GameCategory.cs" />
-    <Compile Include="Entities\IntegrationGames\GameCategoryLanguage.cs" />
     <Compile Include="Entities\IntegrationGames\GameFeature.cs" />
+    <Compile Include="Entities\IntegrationGames\GameFeatureDetail.cs" />
+    <Compile Include="Entities\IntegrationGames\GameFeatureDetailLanguage.cs" />
     <Compile Include="Entities\IntegrationGames\GameFeatureLanguage.cs" />
     <Compile Include="Entities\IntegrationGames\IntegrationGame.cs" />
     <Compile Include="Entities\IntegrationGames\IntegrationGameLanguage.cs" />
-    <Compile Include="Entities\IntegrationGames\NumberOfPlayer.cs" />
-    <Compile Include="Entities\IntegrationGames\NumberOfPlayerLanguage.cs" />
-    <Compile Include="Entities\IntegrationGames\PaceOfPlay.cs" />
-    <Compile Include="Entities\IntegrationGames\PaceOfPlayLanguage.cs" />
-    <Compile Include="Entities\IntegrationGames\PreparationFun.cs" />
-    <Compile Include="Entities\IntegrationGames\PreparationFunLanguage.cs" />
     <Compile Include="Entities\Translations\Language.cs" />
     <Compile Include="Function\Helper.cs" />
     <Compile Include="Entities\Client.cs" />
-    <Compile Include="Migrations\201507310027477_init.cs" />
-    <Compile Include="Migrations\201507310027477_init.Designer.cs">
-      <DependentUpon>201507310027477_init.cs</DependentUpon>
+    <Compile Include="Migrations\201508092118357_init.cs" />
+    <Compile Include="Migrations\201508092118357_init.Designer.cs">
+      <DependentUpon>201508092118357_init.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Enums.cs" />
     <Compile Include="Entities\RefreshToken.cs" />
     <Compile Include="Models\ExternalLoginModels.cs" />
     <Compile Include="Models\GameDescriptionModel.cs" />
+    <Compile Include="Models\GameFeatureDetailModel.cs" />
     <Compile Include="Models\GameFeatureModel.cs" />
     <Compile Include="Models\IntegrationGameModel.cs" />
     <Compile Include="Models\UserModel.cs" />
@@ -224,8 +220,8 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201507310027477_init.resx">
-      <DependentUpon>201507310027477_init.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201508092118357_init.resx">
+      <DependentUpon>201508092118357_init.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
