--- a/WebBellwether.API/WebBellwether.API.csproj
+++ b/WebBellwether.API/WebBellwether.API.csproj
@@ -162,7 +162,6 @@
     <Compile Include="Context\EfDbContext.cs" />
     <Compile Include="Context\InitSeed.cs" />
     <Compile Include="Context\InitSeedEngine.cs" />
-    <Compile Include="Context\NewInitSeed.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\IntegrationGamesController.cs" />
     <Compile Include="Controllers\LanguageController.cs" />
@@ -173,7 +172,8 @@
     <Compile Include="Entities\IntegrationGames\GameFeatureDetailLanguage.cs" />
     <Compile Include="Entities\IntegrationGames\GameFeatureLanguage.cs" />
     <Compile Include="Entities\IntegrationGames\IntegrationGame.cs" />
-    <Compile Include="Entities\IntegrationGames\IntegrationGameLanguage.cs" />
+    <Compile Include="Entities\IntegrationGames\IntegrationGameDetail.cs" />
+    <Compile Include="Entities\IntegrationGames\IntegrationGameFeature.cs" />
     <Compile Include="Entities\Translations\Language.cs" />
     <Compile Include="Function\Helper.cs" />
     <Compile Include="Entities\Client.cs" />
@@ -181,15 +181,41 @@
     <Compile Include="Migrations\201508092118357_init.Designer.cs">
       <DependentUpon>201508092118357_init.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201508092210472_test.cs" />
+    <Compile Include="Migrations\201508092210472_test.Designer.cs">
+      <DependentUpon>201508092210472_test.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201508150949336_integrationGame v1.0.cs" />
+    <Compile Include="Migrations\201508150949336_integrationGame v1.0.Designer.cs">
+      <DependentUpon>201508150949336_integrationGame v1.0.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201508151002308_integrationGame v1.1.cs" />
+    <Compile Include="Migrations\201508151002308_integrationGame v1.1.Designer.cs">
+      <DependentUpon>201508151002308_integrationGame v1.1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201508151013204_integrationGame v1.2.cs" />
+    <Compile Include="Migrations\201508151013204_integrationGame v1.2.Designer.cs">
+      <DependentUpon>201508151013204_integrationGame v1.2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201508151015502_integrationGame v1.3.cs" />
+    <Compile Include="Migrations\201508151015502_integrationGame v1.3.Designer.cs">
+      <DependentUpon>201508151015502_integrationGame v1.3.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201508151046572_integrationGame v1.4.cs" />
+    <Compile Include="Migrations\201508151046572_integrationGame v1.4.Designer.cs">
+      <DependentUpon>201508151046572_integrationGame v1.4.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Enums.cs" />
     <Compile Include="Entities\RefreshToken.cs" />
-    <Compile Include="Models\ExternalLoginModels.cs" />
-    <Compile Include="Models\GameDescriptionModel.cs" />
-    <Compile Include="Models\GameFeatureDetailModel.cs" />
-    <Compile Include="Models\GameFeatureModel.cs" />
-    <Compile Include="Models\IntegrationGameModel.cs" />
-    <Compile Include="Models\UserModel.cs" />
+    <Compile Include="Models\Auth\ExternalLoginModels.cs" />
+    <Compile Include="Models\IntegrationGame\GameDescriptionModel.cs" />
+    <Compile Include="Models\IntegrationGame\GameFeatureDetailModel.cs" />
+    <Compile Include="Models\IntegrationGame\GameFeatureModel.cs" />
+    <Compile Include="Models\IntegrationGame\IntegrationGameDetailModel.cs" />
+    <Compile Include="Models\IntegrationGame\IntegrationGameModel.cs" />
+    <Compile Include="Models\IntegrationGame\NewIntegrationGameModel.cs" />
+    <Compile Include="Models\Auth\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\FacebookAuthProvider.cs" />
     <Compile Include="Providers\GoogleAuthProvider.cs" />
@@ -222,6 +248,24 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201508092118357_init.resx">
       <DependentUpon>201508092118357_init.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201508092210472_test.resx">
+      <DependentUpon>201508092210472_test.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201508150949336_integrationGame v1.0.resx">
+      <DependentUpon>201508150949336_integrationGame v1.0.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201508151002308_integrationGame v1.1.resx">
+      <DependentUpon>201508151002308_integrationGame v1.1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201508151013204_integrationGame v1.2.resx">
+      <DependentUpon>201508151013204_integrationGame v1.2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201508151015502_integrationGame v1.3.resx">
+      <DependentUpon>201508151015502_integrationGame v1.3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201508151046572_integrationGame v1.4.resx">
+      <DependentUpon>201508151046572_integrationGame v1.4.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
