--- a/WebBellwether.API/WebBellwether.API.csproj
+++ b/WebBellwether.API/WebBellwether.API.csproj
@@ -202,6 +202,7 @@
     <Compile Include="Repositories\IntegrationGamesRepository.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
     <Compile Include="Results\ResultState.cs" />
+    <Compile Include="Results\ResultStateContainer.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
