ngAnimate + ngRoute v1.0 test

--- a/WebBellwether.Web/WebBellwether.Web.csproj
+++ b/WebBellwether.Web/WebBellwether.Web.csproj
@@ -126,32 +126,38 @@
     <Content Include="app\services\translationService.js" />
     <Content Include="app\views\associate.html" />
     <Content Include="app\views\authentication.html" />
+    <Content Include="app\views\bellwether.html" />
     <Content Include="app\views\footer.html" />
+    <Content Include="app\views\guide.html" />
     <Content Include="app\views\header.html" />
     <Content Include="app\views\home.html" />
     <Content Include="app\views\integrationGames.html" />
+    <Content Include="app\views\jokes.html" />
     <Content Include="app\views\managementIntegrationGames.html" />
     <Content Include="app\views\managementJokes.html" />
     <Content Include="app\views\oldHeader.html" />
     <Content Include="app\views\orders.html" />
+    <Content Include="app\views\photoGallery.html" />
     <Content Include="app\views\refresh.html" />
     <Content Include="app\views\tokens.html" />
     <Content Include="authComplete.html" />
-    <Content Include="content\css\animate.css" />
+    <Content Include="content\css\animation.css" />
     <Content Include="content\css\bootstrap-theme.css" />
     <Content Include="content\css\bootstrap-theme.min.css" />
     <Content Include="content\css\bootstrap.css" />
     <Content Include="content\css\bootstrap.min.css" />
     <Content Include="content\css\font-awesome.min.css" />
-    <Content Include="content\css\loading-bar.min.css" />
     <Content Include="content\css\site.css" />
     <Content Include="content\css\social-buttons.css" />
+    <Content Include="content\css\test.css" />
     <Content Include="content\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="content\css\metro-icons.css" />
     <Content Include="content\css\metro-icons.min.css" />
     <Content Include="content\css\metro.css" />
     <Content Include="content\css\metro.min.css" />
     <Content Include="content\fonts\metro.svg" />
+    <Content Include="content\css\loading-bar.css" />
+    <Content Include="content\css\loading-bar.min.css" />
     <Content Include="GoodLink.txt" />
     <Content Include="Icon.png" />
     <Content Include="index.html" />
@@ -180,6 +186,8 @@
     <Content Include="scripts\angular-mocks.js" />
     <Content Include="scripts\angular-resource.js" />
     <Content Include="scripts\angular-resource.min.js" />
+    <Content Include="scripts\angular-route-animation-manager.js" />
+    <Content Include="scripts\angular-route-animation-manager.min.js" />
     <Content Include="scripts\angular-route.js" />
     <Content Include="scripts\angular-route.min.js" />
     <Content Include="scripts\angular-sanitize.js" />
@@ -958,6 +966,7 @@
     <Content Include="scripts\jquery-2.1.4.js" />
     <Content Include="scripts\jquery-2.1.4.min.js" />
     <Content Include="scripts\jquery.viewportchecker.js" />
+    <Content Include="scripts\loading-bar.js" />
     <Content Include="scripts\loading-bar.min.js" />
     <Content Include="scripts\metro.js" />
     <Content Include="scripts\metro.min.js" />
