--- a/WebBellwether.Web/packages.config
+++ b/WebBellwether.Web/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="angular-loading-bar" version="0.8.0" targetFramework="net451" />
   <package id="angularjs" version="1.4.1" targetFramework="net451" />
+  <package id="AngularJS.Animate" version="1.4.4" targetFramework="net451" />
+  <package id="AngularJS.Core" version="1.4.4" targetFramework="net451" />
   <package id="bootstrap" version="3.3.4" targetFramework="net451" />
   <package id="jQuery" version="2.1.4" targetFramework="net451" />
   <package id="Metro.UI.CSS" version="3.0.7" targetFramework="net451" />
