--- a/WebBellwether.Web/WebBellwether.Web.csproj
+++ b/WebBellwether.Web/WebBellwether.Web.csproj
@@ -146,7 +146,12 @@
     <Content Include="app\views\refresh.html" />
     <Content Include="app\views\tokens.html" />
     <Content Include="authComplete.html" />
+    <Content Include="content\bootstrap-theme.css" />
+    <Content Include="content\bootstrap-theme.min.css" />
+    <Content Include="content\bootstrap.css" />
+    <Content Include="content\bootstrap.min.css" />
     <Content Include="content\css\animation.css" />
+    <Content Include="content\css\animations.css" />
     <Content Include="content\css\bootstrap-theme.css" />
     <Content Include="content\css\bootstrap-theme.min.css" />
     <Content Include="content\css\bootstrap.css" />
@@ -154,7 +159,6 @@
     <Content Include="content\css\font-awesome.min.css" />
     <Content Include="content\css\site.css" />
     <Content Include="content\css\social-buttons.css" />
-    <Content Include="content\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="content\css\metro-icons.css" />
     <Content Include="content\css\metro-icons.min.css" />
     <Content Include="content\css\metro.css" />
@@ -162,14 +166,10 @@
     <Content Include="content\fonts\metro.svg" />
     <Content Include="content\css\loading-bar.css" />
     <Content Include="content\css\loading-bar.min.css" />
+    <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="GoodLink.txt" />
-    <Content Include="Icon.png" />
     <Content Include="index.html" />
     <Content Include="packages.config" />
-    <Content Include="content\fonts\glyphicons-halflings-regular.woff2" />
-    <Content Include="content\fonts\glyphicons-halflings-regular.woff" />
-    <Content Include="content\fonts\glyphicons-halflings-regular.ttf" />
-    <Content Include="content\fonts\glyphicons-halflings-regular.eot" />
     <Content Include="content\css\bootstrap-theme.css.map" />
     <Content Include="content\css\bootstrap.css.map" />
     <Content Include="PlanPracy.txt" />
@@ -198,8 +198,6 @@
     <Content Include="scripts\authComplete.js" />
     <Content Include="scripts\angular-animate.min.js.map" />
     <Content Include="scripts\angular.min.js.map" />
-    <Content Include="scripts\bootstrap.js" />
-    <Content Include="scripts\bootstrap.min.js" />
     <Content Include="appData\translations\translation_1.json" />
     <Content Include="appData\translations\translation_2.json" />
     <Content Include="content\fonts\selection.json" />
@@ -207,6 +205,9 @@
     <Content Include="content\fonts\metro.ttf" />
     <Content Include="content\fonts\metro.eot" />
     <Content Include="appData\videos\CloudFly.webm" />
+    <Content Include="scripts\bootstrap.js" />
+    <Content Include="scripts\bootstrap.min.js" />
+    <Content Include="scripts\css3-animate-it.js" />
     <Content Include="scripts\errors.json" />
     <Content Include="scripts\angular-touch.min.js.map" />
     <Content Include="scripts\angular-sanitize.min.js.map" />
@@ -214,6 +215,43 @@
     <Content Include="scripts\angular-resource.min.js.map" />
     <Content Include="scripts\angular-loader.min.js.map" />
     <Content Include="scripts\angular-cookies.min.js.map" />
+    <Content Include="content\less\mixins\animation.less" />
+    <Content Include="content\less\mixins\opacity.less" />
+    <Content Include="content\less\mixins\perspective.less" />
+    <Content Include="content\less\mixins\rotate.less" />
+    <Content Include="content\less\mixins\scale.less" />
+    <Content Include="content\less\mixins\skew.less" />
+    <Content Include="content\less\mixins\transform.less" />
+    <Content Include="content\less\mixins\transition.less" />
+    <Content Include="content\less\mixins\translate.less" />
+    <Content Include="content\less\mixins\visibility.less" />
+    <Content Include="content\less\animations\bounce-in.less" />
+    <Content Include="content\less\animations\bounce-out.less" />
+    <Content Include="content\less\animations\fade-in-short.less" />
+    <Content Include="content\less\animations\fade-in.less" />
+    <Content Include="content\less\animations\fade-out.less" />
+    <Content Include="content\less\animations\flip-in.less" />
+    <Content Include="content\less\animations\flip-out.less" />
+    <Content Include="content\less\animations\grow.less" />
+    <Content Include="content\less\animations\light-speed-in.less" />
+    <Content Include="content\less\animations\light-speed-out.less" />
+    <Content Include="content\less\animations\pulse.less" />
+    <Content Include="content\less\animations\roll-in.less" />
+    <Content Include="content\less\animations\roll-out.less" />
+    <Content Include="content\less\animations\rotate-in.less" />
+    <Content Include="content\less\animations\rotate-out.less" />
+    <Content Include="content\less\animations\shake.less" />
+    <Content Include="content\less\animations\swing.less" />
+    <Content Include="content\less\animations\tada.less" />
+    <Content Include="content\less\animations\wiggle.less" />
+    <Content Include="content\less\animations\wobble.less" />
+    <Content Include="content\less\animations.less" />
+    <Content Include="fonts\glyphicons-halflings-regular.woff2" />
+    <Content Include="fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="content\bootstrap.css.map" />
+    <Content Include="content\bootstrap-theme.css.map" />
     <None Include="scripts\jquery-2.1.4.intellisense.js" />
     <Content Include="scripts\i18n\angular-locale_af-na.js" />
     <Content Include="scripts\i18n\angular-locale_af-za.js" />
@@ -462,12 +500,10 @@
     <Content Include="scripts\i18n\angular-locale_zu.js" />
     <Content Include="scripts\jquery-2.1.4.js" />
     <Content Include="scripts\jquery-2.1.4.min.js" />
-    <Content Include="scripts\jquery.viewportchecker.js" />
     <Content Include="scripts\loading-bar.js" />
     <Content Include="scripts\loading-bar.min.js" />
     <Content Include="scripts\metro.js" />
     <Content Include="scripts\metro.min.js" />
-    <Content Include="scripts\npm.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
