--- a/WebBellwether.API/WebBellwether.API.csproj
+++ b/WebBellwether.API/WebBellwether.API.csproj
@@ -199,6 +199,7 @@
     <Compile Include="Models\IntegrationGame\IntegrationGameModel.cs" />
     <Compile Include="Models\IntegrationGame\NewIntegrationGameModel.cs" />
     <Compile Include="Models\Auth\UserModel.cs" />
+    <Compile Include="Models\IntegrationGame\SimpleIntegrationGame.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\FacebookAuthProvider.cs" />
     <Compile Include="Providers\GoogleAuthProvider.cs" />
