--- a/WebBellwether.API/WebBellwether.API.csproj
+++ b/WebBellwether.API/WebBellwether.API.csproj
@@ -174,6 +174,10 @@
     <Compile Include="Entities\IntegrationGame\IntegrationGame.cs" />
     <Compile Include="Entities\IntegrationGame\IntegrationGameDetail.cs" />
     <Compile Include="Entities\IntegrationGame\IntegrationGameFeature.cs" />
+    <Compile Include="Entities\Joke\Joke.cs" />
+    <Compile Include="Entities\Joke\JokeCategory.cs" />
+    <Compile Include="Entities\Joke\JokeCategoryDetail.cs" />
+    <Compile Include="Entities\Joke\JokeDetail.cs" />
     <Compile Include="Entities\Translations\Language.cs" />
     <Compile Include="Function\Helper.cs" />
     <Compile Include="Entities\Client.cs" />
@@ -189,6 +193,14 @@
     <Compile Include="Migrations\201509212152105_flag.Designer.cs">
       <DependentUpon>201509212152105_flag.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201510192048377_joke v1.0.cs" />
+    <Compile Include="Migrations\201510192048377_joke v1.0.Designer.cs">
+      <DependentUpon>201510192048377_joke v1.0.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201510192124319_joke v1.1.cs" />
+    <Compile Include="Migrations\201510192124319_joke v1.1.Designer.cs">
+      <DependentUpon>201510192124319_joke v1.1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AvailableLanguage.cs" />
     <Compile Include="Models\Enums.cs" />
@@ -201,6 +213,8 @@
     <Compile Include="Models\IntegrationGame\NewIntegrationGameModel.cs" />
     <Compile Include="Models\Auth\UserModel.cs" />
     <Compile Include="Models\IntegrationGame\SimpleIntegrationGame.cs" />
+    <Compile Include="Models\Joke\JokeCategoryModel.cs" />
+    <Compile Include="Models\Joke\JokeModel.cs" />
     <Compile Include="Models\Translation\TranslationWebServiceModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\FacebookAuthProvider.cs" />
@@ -209,7 +223,6 @@
     <Compile Include="Providers\SimpleRefreshTokenProvider.cs" />
     <Compile Include="Repositories\AuthRepository.cs" />
     <Compile Include="Repositories\GenericRepository.cs" />
-    <Compile Include="Repositories\UnitOfWork.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
     <Compile Include="Results\ResultState.cs" />
     <Compile Include="Results\ResultStateContainer.cs" />
@@ -219,7 +232,11 @@
     <Compile Include="Services\IntegrationGameService\IntegrationGameService.cs" />
     <Compile Include="Services\IntegrationGameService\ManagementFeaturesService.cs" />
     <Compile Include="Services\IntegrationGameService\ManagementIntegrationGamesService.cs" />
+    <Compile Include="Services\JokeService\JokeService.cs" />
+    <Compile Include="Services\JokeService\ManagementJokeCategoryService.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="UnitOfWork\IntegrationGameUnitOfWork.cs" />
+    <Compile Include="UnitOfWork\JokeUnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
@@ -235,6 +252,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Services\JokeService\Abstract\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
@@ -248,6 +266,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201509212152105_flag.resx">
       <DependentUpon>201509212152105_flag.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201510192048377_joke v1.0.resx">
+      <DependentUpon>201510192048377_joke v1.0.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201510192124319_joke v1.1.resx">
+      <DependentUpon>201510192124319_joke v1.1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
