--- a/WebBellwether.API/WebBellwether.API.csproj
+++ b/WebBellwether.API/WebBellwether.API.csproj
@@ -164,6 +164,7 @@
     <Compile Include="Context\InitSeedEngine.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\IntegrationGamesController.cs" />
+    <Compile Include="Controllers\JokesController.cs" />
     <Compile Include="Controllers\LanguageController.cs" />
     <Compile Include="Controllers\RefreshTokensController.cs" />
     <Compile Include="Controllers\TranslationController.cs" />
