a lot of work and the results are poor . List of jokes (for user added) , pagination in new list added . Search for integration games work only per game name (game features I leave at the end) and small bug fixed.

--- a/WebBellwether.Web/WebBellwether.Web.csproj
+++ b/WebBellwether.Web/WebBellwether.Web.csproj
@@ -131,6 +131,7 @@
     <Content Include="app\languages\managementLanguages.html" />
     <Content Include="app\languages\managementLanguagesController.js" />
     <Content Include="app\search\search.html" />
+    <Content Include="app\search\searchController.js" />
     <Content Include="app\translations\translateService.js" />
     <Content Include="app\translations\translationController.js" />
     <Content Include="app\filters\customFilters.js" />
